css/override.css
/*********************************************************************************/
/* Custom stuff by shaun                                                         */
/*********************************************************************************/

*::selection {
	background: #99DE59;
}
*::-moz-selection {
	background: #99DE59;
}

body
{
	font-family: 'Maven Pro', 'Verdana', sans-serif;
	font-weight: normal;
}

iframe
{
	width: 100%;
	height: 360px;
}

h1, h2, h3, h4, h5, h6
{
	font-family: 'Ubuntu', 'Arial', sans-serif;
	font-weight: 700;
}

.button
{
	font-family: 'Ubuntu', 'Arial', sans-serif;
	font-weight: 700;
}

.h2-break
{
	display: block;
	height: 4.2em;
}

#nav ul li a
{
	font-family: 'Ubuntu', 'Arial', sans-serif;
	font-weight: 700;
}

#banner-wrapper
{
	padding-bottom: 1.75em;
}
#banner-wrapper p
{
	color: #696969;
}

#copyright
{
	text-align: justify;
}

#copyright .footer-element
{
	display: inline-block;
	padding-left: .5em;
	padding-right: .5em;
}

#copyright a
{
	text-decoration: none;
}

#copyright a span
{
	text-decoration: underline;
}

#copyright a :hover
{
	text-decoration: none;
}

.button.alt
		{
			background: #E0E0E0;
			color: #444;
		}

			.button.alt:hover
			{
				background: #DBDBDB;
			}

			.button.alt:active
			{
				background: #D6D6D6;
			}

.lighter a
{
	text-decoration: none;
}

/* Font size adjustments in the main-wrapper section only. EM's only */
#main-wrapper
{
	font-size: 1.4em;
}
#main-wrapper h2
{
	font-size: 2em;
}
#main-wrapper h3
{
	font-size: 1.2em;
	margin: 0 0 1.5em 0;
}
#main-wrapper .button
{
	font-size: 1.1em;
}
#main-wrapper #content ul
{
	padding-left: 2.4em;
}
#main-wrapper #content ul li
{
	list-style: disc;
}
#main-wrapper #content ul li ul li
{
	list-style: circle;
}
#main-wrapper #content ul li ul li ul li
{
	list-style: square;
}
#main-wrapper #content ul.fa-ul
{
	padding-left: 0;
}
#main-wrapper #content ul.fa-ul li
{
	list-style: none;
}
#main-wrapper #content ul.fa-ul li ul li
{
	list-style: none;
}
#main-wrapper #content ul.fa-ul li ul li ul li
{
	list-style: none;
}
/* */
/*
h2
{
	font-size: 2.25em;
	margin: 0 0 1.1em 0;
	line-height: 1em;
}

h3
{
	font-size: 1.35em;
	margin: 0 0 2.25em 0;
}
*/

